syntax = "proto3";
package com.vang.grpc;
option java_package = "com.vang.authsellerservice.grpc.gen";
option java_multiple_files = true;
option java_outer_classname = "SellerClientGrpc";

service LoginSeller {
  rpc login(LoginRequest) returns (LoginReply);
}

message LoginRequest {
  string username = 1;
}

message LoginReply {
  bool status = 1;
  string password = 2;
}